--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -108,10 +108,10 @@ OBJS= \
     obj/skein.o
 
 
-all: fairquarkd.exe
+all: randomquarkd.exe
 
-test check: test_fairquark.exe FORCE
-	test_fairquark.exe
+test check: test_randomquark.exe FORCE
+	test_randomquark.exe
 
 #
 # LevelDB support
@@ -128,7 +128,7 @@ obj/%.o: %.cpp $(HEADERS)
 obj/%.o: %.c $(HEADERS)
 	$(CXX) -c $(xCXXFLAGS) -fpermissive -o $@ $<
 
-fairquarkd.exe: $(OBJS:obj/%=obj/%)
+randomquarkd.exe: $(OBJS:obj/%=obj/%)
 	$(CXX) $(CFLAGS) $(LDFLAGS) -o $@ $(LIBPATHS) $^ $(LIBS)
 
 TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
@@ -136,11 +136,11 @@ TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
 obj-test/%.o: test/%.cpp $(HEADERS)
 	$(CXX) -c $(TESTDEFS) $(CFLAGS) -o $@ $<
 
-test_fairquark.exe: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
+test_randomquark.exe: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
 	$(CXX) $(CFLAGS) $(LDFLAGS) -o $@ $(LIBPATHS) $^ -lboost_unit_test_framework$(BOOST_SUFFIX) $(LIBS)
 
 clean:
-	rm -f fairquarkd.exe test_fairquark.exe
+	rm -f randomquarkd.exe test_randomquark.exe
 	rm -f obj/*
 	rm -f obj-test/*
 	cd leveldb && $(MAKE) TARGET_OS=NATIVE_WINDOWS clean && cd ..
